# job-manager

./: .gitignore  Dockerfile  README.md  clear_sessions.py  dev.env  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
dispatcher/: log.py  serializers.py  services.py  urls.py  views.py
dispatcher/tests/: test_services.py  test_views.py
executor/: compute_sizes.py  config.py  errors.py  executor.py  kheops.py  logs.py  orthanc.py  schedulers.py  ssh.py
executor/tests/: test_schedulers.py
job_manager/: .env  admin.py  celery.py  middleware.py  urls.py  users.py  wsgi.py
job_manager/settings/: base.py  dev.py  production.py
launcher/: admin.py  models.py  tasks.py  urls.py
launcher/cache/: aggregation.py  albums.py  utils.py
launcher/forms/: aggregate.py  launcher.py
launcher/kheops/: __init__.py  _client.py  models.py  utils.py
launcher/migrations/: 0001_initial.py  0002_delete_aggregationresult.py  0003_initial.py  0004_aggregationsubmission.py  0005_alter_aggregationsubmission_state.py
launcher/tasks/: aggregate.py  job.py  utils.py
launcher/views/: aggregate.py  job.py  launcher.py  submissions.py
manager/: admin.py  serializers.py  urls.py
manager/migrations/: 0001_initial.py  0002_job_kheops_album_id_alter_job_slurm_id_and_more.py  0003_alter_size_abbreviation.py  0004_alter_modality_abbreviation_alter_modality_long_name.py  0005_accesstoken_remove_runnable_user_app_automatic_run_and_more.py  0006_alter_accesstoken_token.py  0007_alter_accesstoken_token.py  0009_accesstoken.py  (+4 more)
templates/: aggregate_results.html  base.html
(+18 files in other folders)
